--- a/zips/plugin.video.Scrubs/Changelog.txt
+++ b/zips/plugin.video.Scrubs/Changelog.txt
@@ -1,10 +1,18 @@
 v1.1
 - Initial Version.
 - Forked from Yoda and modified to my liking.
+(Thanks to any devs that helped design any part of this.)
 
 v1.2
 - Cleaned up random stuff and updated providers.
 - Tested every provider on Oct. 4th 2018.
-- Removed all the ones that were not working.
+(Removed all the ones that were not working.)
 - Disabled a few providers in settings that are ddos protected.
 - Disabled a few more providers in settings that were slow or unavailable.
+
+v1.3
+- Added more providers that i fixed.
+- Removed all the providers that dont work for my device.
+(Stored in my pocket to fix in the future.)
+- All providers are enabled in the settings and working.
+(Removed the provider settings that matched ones i removed.)
