--- a/zips/plugin.video.scrubsv2/Changelog.txt
+++ b/zips/plugin.video.scrubsv2/Changelog.txt
@@ -1,10 +1,16 @@
 
-[B][COLOR purple]v2.7[/COLOR][/B]
+[B][COLOR purple] v2.8 [/COLOR][/B]
+- Added Pair Em in Tools Menu.(Web Browser Needed.)
+- Fixed some Providers.
+- Added a few Providers.
+- Removed a couple dead Providers.
+- Set Default Theme to Purple :).
+
+[B][COLOR purple] v2.7 [/COLOR][/B]
 -[B][COLOR orange]Renamed Addon Due to Issues With Capital Letters.[/COLOR][/B]
 (Sorry to Anyone Using This Addon.)(Should Run Amazing Now Tho!)
 
-
-[B][COLOR purple]v2.6[/COLOR][/B]
+[B][COLOR purple] v2.6 [/COLOR][/B]
 [B][COLOR purple](Might need to clear your UserData or revert to Default Settings, Sorry.)[/COLOR][/B]
 - Changed to a new url for  'In Theaters'  and  'In Theaters(OldStyle)'.
 (Both should be alot nicer for everyone worldwide, results vary)
@@ -24,35 +30,35 @@
 (Some new settings and stuff might have issues, Sorry still testing them.)
 (Contact me and tell me whats up and ill get to work fixing it.)
 
-[B][COLOR purple]v2.5[/COLOR][/B]
+[B][COLOR purple] v2.5 [/COLOR][/B]
 - Added a couple new providers and their settings.
 (Also Fixed a few that were broken.)
 
-[B][COLOR purple]v2.4[/COLOR][/B]
+[B][COLOR purple] v2.4 [/COLOR][/B]
 - Added Show Changelog option to the main menu.
 - Added a few more providers and added proper settings for them.
 - Fixed a couple providers, also added a few spare domains to some others.
 - Fixed a couple lists that didnt work proper.
 (If ya find any more lists that need adjusting let me know.)
 
-[B][COLOR purple]v2.3[/COLOR][/B]
+[B][COLOR purple] v2.3 [/COLOR][/B]
 - Added a new url for  'In Theaters'.
 - Renamed old 'In Theaters' option and added it below the new one in movies.
 - Added a few scrapers back that were down for repairs.
 - Added a few more things in from NiteCrawler that were still being tested.
 - Moved 'Featured' options out of the 'My' sections to where they really belong.
 
-[B][COLOR purple]v2.1 and v2.2[/COLOR][/B]
+[B][COLOR purple] v2.1 and v2.2 [/COLOR][/B]
 -Bugfix
 
-[B][COLOR purple]v2.0[/COLOR][/B]
+[B][COLOR purple] v2.0 [/COLOR][/B]
 - Tested and fixed a few fuckups lol.
 - Decided the new updates earn this thing a freash number.
 (Last public release was 1.5, 1.6-1.8 was released to private)
 (Might have to restore settings to default in the addon)
 (Might have to uninstall the addon and wipe its userdata)
 
-[B][COLOR purple]v1.6[/COLOR][/B]
+[B][COLOR purple] v1.6 [/COLOR][/B]
 - Added Menu Items from NiteCrawler and PlugIns.
 - Added NiteCrawlers UserList Collection also.
 - Cleaned Providers and Changed the Provider Settings Layout.
@@ -60,7 +66,7 @@
 (Might have to restore settings to default in the addon)
 (Might have to uninstall the addon and wipe its userdata)
 
-[B][COLOR purple]v1.5[/COLOR][/B]
+[B][COLOR purple] v1.5 [/COLOR][/B]
 - Total CleanUp of Providers, Checked and all good as of 10-12-2018.
 - Settings updated to match provider list.
 - Error found on Kodi 18: Settings get all messed up and scrambled.
@@ -68,29 +74,29 @@
 - Disabled darewatch provider for that reason and because its sloppy.
 - Added a default fanart.tv api key in the settings for ya.
 
-[B][COLOR purple]v1.4.5[/COLOR][/B]
+[B][COLOR purple] v1.4.5 [/COLOR][/B]
 - Updated the search code to work on Kodi 18 thanks to doko's github.
 (was lazy and just uploaded this little update as 1.4 because who cares about 18)
 
-[B][COLOR purple]v1.4[/COLOR][/B]
+[B][COLOR purple] v1.4 [/COLOR][/B]
 - Added 11 more providers that i fixed and 5 that i forgot in a folder.
 (Added them to the addon settings also enabled.)
 
-[B][COLOR purple]v1.3[/COLOR][/B]
+[B][COLOR purple] v1.3 [/COLOR][/B]
 - Added more providers that i fixed.
 - Removed all the providers that dont work for my device.
 (Stored in my pocket to fix in the future.)
 - All providers are enabled in the settings and working.
 (Removed the provider settings that matched ones i removed.)
 
-[B][COLOR purple]v1.2[/COLOR][/B]
+[B][COLOR purple] v1.2 [/COLOR][/B]
 - Cleaned up random stuff and updated providers.
 - Tested every provider on Oct. 4th 2018.
 (Removed all the ones that were not working.)
 - Disabled a few providers in settings that are ddos protected.
 - Disabled a few more providers in settings that were slow or unavailable.
 
-[B][COLOR purple]v1.1[/COLOR][/B]
+[B][COLOR purple] v1.1 [/COLOR][/B]
 - Initial Version.
 - Forked from Yoda and modified to my liking.
 (Thanks to any devs that helped design any part of this.)
