--- a/zips/plugin.video.NiteCrawler/Changelog.txt
+++ b/zips/plugin.video.NiteCrawler/Changelog.txt
@@ -1,11 +1,22 @@
 
-v1.0
+[B][COLOR yellow] v1.2 [/COLOR][/B]
+- Added Changelog option to the Main Menu.
+- Added Pair Em in Tools Menu.(Web Browser Needed.)
+- Fixed some plugins.
+- Added and Adjusted Settings for Providers Tab.
+
+[B][COLOR yellow] v1.1 [/COLOR][/B]
+(Dont remember lol)
+
+[B][COLOR yellow] v1.0 [/COLOR][/B]
 - TestRun.
 - Added default images for backups to code.
 (Looks like the normal artwork dont work on Kodi 18 lol)
 - Seems to work fine with Kodi 18.
 (Besides that artwork lmao)
 
-Report any errors or issues by email.
+
+[B][COLOR yellow] Report any errors or issues by email.
 (jewbmx@gmail.com)
 (Feel free to contact me for any other reason also.)
+[/COLOR][/B]
