--- a/zips/script.ezclean/changelog.txt
+++ b/zips/script.ezclean/changelog.txt
@@ -1,13 +1,23 @@
-(Report any errors or issues @ https://github.com/jewbmx/script.ezclean/issues)
+(Report any errors or issues @ https://github.com/jewbmx/repo/issues)
 (If you'd like to add anything or help out with this addon, fork and pull.)
+[B][COLOR yellow] WARNING: Still Testing, May Cause Problems. [/COLOR][/B]
 
-v1.1
+[B] v1.2 [/B]
+- Full Dent Check and fix.
+- Added Show Changelog.
+- Few bugs fixed.
+- Added a few kodi 18 fixes.
+- Added Wizard Settings shortcut to Wizard Menu.
+
+[B] v1.1 [/B]
 - Updated debug log code.
 - Reorganized Menus.
 - Added Force Update for addons and repos.
 - Removed SpeedTest.
 - Renamed to prevent any issues.
+- Gave the Artwork a little Purple.
 
-v1.0
+[B] v1.0 [/B]
 - Initial Release.
 (Fork of EZ Maintenance+)
+
