--- a/zips/plugin.video.scrubsv2/Changelog.txt
+++ b/zips/plugin.video.scrubsv2/Changelog.txt
@@ -1,7 +1,13 @@
 [B][COLOR grey](Contact me about any errors or issues.)(https://github.com/jewbmx/repo/issues)
 (Also feel free to test anything and tell me what works and what dont.) [/COLOR][/B]
 
+- Added a option in Tools to Clear ResolveURL's Cache.
+- Few light updates to some Providers.
+- Moved a couple Providers back to the normal folder for use.
+- Added 2 more Torrent Providers made by Tempest.
+- Bunch of random code fixes and changes.
 
+[B][COLOR purple] v4.3.2 [/COLOR][/B]
 - Cleaned this ChangeLog file. anything before 4.1 is removed.
 (old log located on github page only.)
 - Did a half assed Provider check and ditched the nojoys in another temp folder.
@@ -22,7 +28,7 @@
 (tossed in as a custom list so its not really coded in like most addons.)
 - Added a metadataClean fix to stop the debug log spam. (thanks to gaia)
 - Fixed a issue that was making PairEm reopen itself.
-- Updated the Seftings code to mostly match my setup.
+- Updated the Settings code to mostly match my setup.
 (also fixed a couple lines i coded with caps lol.)
 - Added enable/disable code and settings for Providers.
 - Updated the Settings to a different style to make life easier.
